--- a/article.html
+++ b/article.html
@@ -285,6 +285,10 @@ a.white, a.white:hover, a.white:visited {
 		</div>
 	</div>
 	<div class="right-aside">
+		<!-- RSS -->
+		<a style="float: right;" href="{{ site.base }}/feed.xml" target="_blank">
+			<img style="margin-top: 10px; margin-right: 10px;" src="{{ site.images_url }}rss.svg" width="20px" alt="" border="0"/>
+		</a>
 		<!-- duoshuo -->
 		<div class="ds-thread" data-thread-key="index" data-max-depth="{{ site.duoshuo_max_depth }}" data-title="{{ site.title }}" data-url="{{ site.domain }}{{ page.url }}"></div>
 	</div>
