--- a/article.html
+++ b/article.html
@@ -228,6 +228,8 @@ a.white, a.white:hover, a.white:visited {
 	<div class="left-aside">
 		<div class="remark">
 			<a class="white" href="{{ site.base }}/"><h1>{{ site.title }}</h1></a>
+			<p> Email : neebel@163.com </p>
+			<p> GitHub : <a href="https://github.com/neebel">neebel</a> </p>
 		</div>
 	</div>
 	<div class="center-aside">
@@ -285,15 +287,10 @@ a.white, a.white:hover, a.white:visited {
 		</div>
 	</div>
 	<div class="right-aside">
-		<!-- RSS -->
-		<a style="float: right;" href="{{ site.base }}/feed.xml" target="_blank">
-			<img style="margin-top: 10px; margin-right: 10px;" src="{{ site.images_url }}rss.svg" width="20px" alt="" border="0"/>
-		</a>
 		<!-- duoshuo -->
 		<div class="ds-thread" data-thread-key="index" data-max-depth="{{ site.duoshuo_max_depth }}" data-title="{{ site.title }}" data-url="{{ site.domain }}{{ page.url }}"></div>
 	</div>
 </div>
-<div class="talk">Don't be afraid, Step By Step</div>
 <div class="footer"></div>
 
 <!-- duoshuo -->
