[博客]：样式修改

--- a/article.html
+++ b/article.html
@@ -229,7 +229,7 @@ a.white, a.white:hover, a.white:visited {
 		<div class="remark">
 			<a class="white" href="{{ site.base }}/"><h1>{{ site.title }}</h1></a>
 			<p> Email : neebel@163.com </p>
-			<p> GitHub : <a href="https://github.com/neebel">neebel</a> </p>
+			<p> GitHub : <a class="link" href="https://github.com/neebel">neebel</a> </p>
 		</div>
 	</div>
 	<div class="center-aside">
