--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body {
   </div>
 </div>
 <div class="talk">
-	<a class="link" href="{{ site.base }}/article.html">Enter</a>
+	<a class="link" href="{{ site.base }}/article.html">Enter >>> </a>
 	<p>爱音乐，爱电影，爱生活，iOS Developer</p>
 </div>
 <div class="footer"></div>
