--- a/article.html
+++ b/article.html
@@ -259,7 +259,7 @@ a.white, a.white:hover, a.white:visited {
 					<% } %>
 					<div>
 						<p class="list-top">
-							<a class="author-name dark-grey-link" target="_parent" href="{{ site.base }}/aboutme"><%= posts[i].author %></a>
+							<a class="author-name dark-grey-link" target="_parent" href=""><%= posts[i].author %></a>
 							<em>&nbsp;·</em>
 							<span class="time" date-time="<%= posts[i].date %>"></span>
 						</p>
